依存関係の追加、Tailwind CSSの設定変更、コンポーネントのスタイルと構造の改善を行いました。新しいテーマトグル機能を実装し、エラーメッセージやローディングスピナーのデザインを更新しました。また、サイドバーとヘッダーのレイアウトを調整し、404ページのデザインを改善しました。

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.58",
     "@vueuse/core": "^13.5.0",
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
+    "lucide-vue-next": "^0.525.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.0"
